--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ejero/terminal-site#readme",
   "dependencies": {
+    "aws-sdk": "^2.1467.0",
     "express": "^4.18.2",
     "sequelize": "^6.33.0",
     "sqlite3": "^5.1.6"
