--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "aws-sdk": "^2.1467.0",
     "express": "^4.18.2",
+    "readme-md-generator": "^1.0.0",
     "sequelize": "^6.33.0",
     "sqlite3": "^5.1.6"
   }
